# pdlp

./: .gitignore  LICENSE  Makefile  README.md  ROADMAP.md  pdlp.code-workspace  pyproject.toml
pdlp/: graph.py  node.py  shape.py  style.py  types.py
tests/: demo.dot  test_graph.py  test_main.py
