[tool.poetry]
name = "pdlp"
version = "0.1.0"
description = "Python-style Dot Language Parser"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {version = "^7.3.2", extras = ["toml"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"